<resources>
    <string name="app_name">D&amp;D Dungeon Master\'s Companion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navitem_players_handbook">Player\'s Handbook Consulting</string>
    <string name="navitem_home">Home</string>
    <string name="phb_menu_races">Races</string>
    <string name="phb_menu_classes">Classes</string>
    <string name="phb_menu_backgrounds">Backgrounds</string>
    <string name="phb_menu_feats">Feats</string>
    <string name="phb_menu_equipments">Equipments</string>
    <string name="phb_menu_downtime">Traveling, Downtime &amp; Services</string>
    <string name="phb_menu_combat">Combat Rulings</string>
    <string name="phb_menu_spells">Spells</string>
    <string name="phb_menu_experience">Experience Table</string>
    <string name="phb_menu_trinkets">Trinkets Table</string>
    <string name="phb_races_human">Human</string>
    <string name="phb_races_human_default">Default Human</string>
    <string name="phb_races_human_variant">Variant Human</string>
    <string name="phb_races_elf">Elf</string>
    <string name="phb_races_elf_high">High Elf</string>
    <string name="phb_races_elf_wood">Wood Elf</string>
    <string name="phb_races_elf_drow">Drow</string>
    <string name="phb_races_dwarf">Dwarf</string>
    <string name="phb_races_dwarf_hill">Hills Dwarf</string>
    <string name="phb_races_dwarf_mountain">Mountains Dwarf</string>
    <string name="phb_races_halfling">Halfling</string>
    <string name="phb_races_halfling_stout">Halfling Stout</string>
    <string name="phb_races_halfling_lightfoot">Halfling Lightfoot</string>
    <string name="phb_races_details_basic_features">Basic Features</string>
    <string name="phb_races_details_height">Height</string>
    <string name="phb_races_details_weight">Weight</string>
    <string name="phb_races_details_size">Size</string>
    <string name="phb_races_details_adult_age">Adult Age</string>
    <string name="phb_races_details_max_age">Maximum Age</string>
    <string name="phb_races_details_alignment">Alignment</string>
    <string name="phb_races_details_racial_traits">Racial Traits</string>
    <string name="phb_races_details_ability_score">Ability Scores Mod.</string>
    <string name="phb_races_details_speed">Speed</string>
    <string name="phb_races_details_languages">Languages</string>
    <string name="phb_races_details_darkvision">Darkvision</string>
    <string name="phb_races_details_other">Other</string>
    <string name="phb_races_details_sample_names">Sample Names</string>
    <string name="phb_races_details_darkvision_no">No</string>
    <string name="phb_races_details_darkvision_yes">Yes, up to %s ft.</string>
    <string name="phb_races_details_darkvision_description">You can see in dim light within %s feet of you as if it were bright light, and in darkness as if it were dim light. You can\'t discern color in darkness, only shades of gray.</string>
    <string name="phb_class_details_hitpoints">Hit Points</string>
    <string name="phb_class_details_hitdice">Hit Dice</string>
    <string name="phb_class_details_proficiencies">Proficiencies</string>
    <string name="phb_class_details_armor">Armor</string>
    <string name="phb_class_details_weapons">Weapons</string>
    <string name="phb_class_details_tools">Tools</string>
    <string name="phb_class_details_saves">Saving Throws</string>
    <string name="phb_class_details_skills">Skills</string>
    <string name="phb_class_details_equipment">Starting Equipment</string>
    <string name="phb_class_details_wealth">Starting Wealth (replacement)</string>
    <string name="phb_class_details_multiclassing">Multiclassing</string>
    <string name="phb_class_details_belongings">Initial Belongings</string>
    <string name="phb_class_details_multiclass_prerequisites">Prerequisites</string>
    <string name="phb_class_details_multiclass_proficiencies">Acquired Proficiencies</string>
    <string name="phb_class_details_level1">1st Level</string>
    <string name="phb_class_details_level2">2nd Level</string>
    <string name="phb_class_details_level3">3rd Level</string>
    <string name="phb_class_details_level4">4th Level</string>
    <string name="phb_class_details_level5">5th Level</string>
    <string name="phb_class_details_level6">6th Level</string>
    <string name="phb_class_details_level7">7th Level</string>
    <string name="phb_class_details_level8">8th Level</string>
    <string name="phb_class_details_level9">9th Level</string>
    <string name="phb_class_details_level10">10th Level</string>
    <string name="phb_class_details_level11">11th Level</string>
    <string name="phb_class_details_level12">12th Level</string>
    <string name="phb_class_details_level13">13th Level</string>
    <string name="phb_class_details_level14">14th Level</string>
    <string name="phb_class_details_level15">15th Level</string>
    <string name="phb_class_details_level16">16th Level</string>
    <string name="phb_class_details_level17">17th Level</string>
    <string name="phb_class_details_level18">18th Level</string>
    <string name="phb_class_details_level19">19th Level</string>
    <string name="phb_class_details_level20">20th Level</string>
    <string name="phb_class_details_intro">Introduction</string>
    <string name="phb_class_details_read">Read</string>
    <string name="navitem_stat_calculator">Ability Calculator</string>
    <string name="calc_title">ABILITY CALCULATOR</string>
    <string name="calc_ability">Ability</string>
    <string name="calc_base">Base Value</string>
    <string name="calc_bonus">Bonus</string>
    <string name="calc_total">Total</string>
    <string name="calc_modifier">Modifier</string>
    <string name="calc_points_spent">Points Spent</string>
    <string name="calc_race">Race:</string>
    <string name="calc_ability_str">Str</string>
    <string name="calc_ability_dex">Dex</string>
    <string name="calc_ability_con">Con</string>
    <string name="calc_ability_int">Int</string>
    <string name="calc_ability_wis">Wis</string>
    <string name="calc_ability_cha">Cha</string>
    <string name="calc_points_remain">Remaining Points:</string>
    <string name="phb_class_details_title">The %s</string>
    <string name="phb_class_details_features">%s Features</string>
    <string name="phb_class_details_table_txt">%s Table</string>
    <string name="phb_class_details_table_btn">Read</string>
    <string name="phb_class_details_level_title">%sth Level</string>
    <string name="phb_trinkets_quick_roll">Quick Roll</string>
    <string name="phb_trinkets_quick_roll_all">Quick Roll on a Random Table</string>
    <string name="prerequisite">Prerequisite</string>
    <string name="phb_trinket_table_roll_desc">Rolling on this table: </string>
    <string name="phb_trinket_table_roll_btn">Roll on This Table</string>
    <string name="phb_class_details_classoption_choose">Choose:</string>
</resources>
