<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/partyreddragon">

        <Button
            android:id="@+id/phb_item_races"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/races"
            android:text="@string/phb_menu_races"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:padding="4dp"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/phb_item_classes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/swordaxe"
            android:text="@string/phb_menu_classes"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:padding="4dp"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/phb_item_feats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/potion"
            android:text="@string/phb_menu_feats"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:padding="4dp"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/phb_item_trinkets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/trinkets"
            android:text="@string/phb_menu_trinkets"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:padding="4dp"
            android:background="@android:color/transparent"/>

    </LinearLayout>

</ScrollView>