<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/calc_title"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/calc_race"/>

            <Spinner
                android:id="@+id/culc_race_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:layout_width="100dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/calc_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="As a Half-Elf, you gain a bonus +2 on Charisma and a bonus +1 on two other abilities of your choise."
            android:textSize="11sp"/>

        <View
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:text="@string/calc_ability" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/calc_base" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/calc_bonus" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/calc_total" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/calc_points_spent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/calc_abilities_box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/calc_reset"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="14sp"
                android:text="@string/calc_points_remain" />

            <TextView
                android:id="@+id/calc_remaining_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:textSize="30sp"
                android:layout_marginLeft="8dp"
                tools:text="27" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:textSize="30sp"
                android:text="/27" />

        </LinearLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="Total Points:"
                android:gravity="center_vertical"
                android:textSize="18dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="27" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>